--- a/src/component/accordion/style.css
+++ b/src/component/accordion/style.css
@@ -7,6 +7,10 @@
     flex-direction: column;
     gap: 10px;
 }
+.wrapper button {
+    background: coral;
+    color: #fff;
+}
 .accordion {
     width: 550px;
 }
